--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,29 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;  
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 .App {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
- 
 }
 .mainSection {
   flex-grow: 1;
- 
+}
+.linkedIn {
+  color: white;
+}
+.linkedIn:hover {
+  color: #0a66c2;
+  transition: 300ms;
+}
+.bg-Aboutus {
+  background-color: #000000;
+  background-image: linear-gradient(180deg, #000000 0%, #141414 100%);
+}
+
+@media(max-width: 767px){
+  .marginImg{
+    margin-bottom: 15px;
+  }
 }
